[gd_scene load_steps=6 format=3 uid="uid://cnns7rolahkmd"]

[ext_resource type="Script" uid="uid://clum80jjkvycd" path="res://assets/scripts/mainmenu.gd" id="1_natt5"]
[ext_resource type="Texture2D" uid="uid://dj6tclp0y2ax8" path="res://assets/media/menus/Mock up by Programmer.png" id="2_r3g3c"]
[ext_resource type="Texture2D" uid="uid://deny5yyeg8ugw" path="res://assets/media/menus/Untitled design (3).png" id="3_7op8g"]
[ext_resource type="Texture2D" uid="uid://cdsfc0xm5yt4y" path="res://assets/media/menus/Untitled design (4).png" id="4_mo8e2"]
[ext_resource type="Script" uid="uid://dbgxa6lrmblja" path="res://assets/scripts/mini_tank_barrel.gd" id="5_nrxli"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_natt5")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1200.0
offset_bottom = 675.0
texture = ExtResource("2_r3g3c")

[node name="Play button" type="Button" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 698.0
offset_top = 99.0
offset_right = 745.0
offset_bottom = 130.0
scale = Vector2(8.02071, 4.78338)
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="Options button" type="Button" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 698.0
offset_top = 264.0
offset_right = 745.0
offset_bottom = 295.0
scale = Vector2(8.02071, 4.78338)
text = "tyler"
metadata/_edit_use_anchors_ = true

[node name="Exit button" type="Button" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 698.0
offset_top = 431.0
offset_right = 745.0
offset_bottom = 462.0
scale = Vector2(8.02071, 4.78338)
text = "EXIT"

[node name="Mini Tank" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(332, 325)
scale = Vector2(0.393617, 0.393617)
texture = ExtResource("3_7op8g")

[node name="Mini tank barrel" type="Sprite2D" parent="."]
position = Vector2(384, 312)
scale = Vector2(0.349999, 0.35)
texture = ExtResource("4_mo8e2")
offset = Vector2(158.571, -0.714294)
script = ExtResource("5_nrxli")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 12.0
offset_right = 345.0
offset_bottom = 106.0
wrap_mode = 1
scroll_smooth = true

[connection signal="pressed" from="Play button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Options button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Exit button" to="." method="_on_exit_button_pressed"]
